content/posts/canonitech/canonitech.css
/* Summary table */

table.summary-table {
    vertical-align: top;
}

.summary-table td:nth-child(1) {
  min-width: 11rem;
  font-weight: bold;
}

.summary-table td:nth-child(2) {
  font-style: italic;
}

.summary-table td {
    padding-bottom: 0.5rem;
    line-height: 1.3;
    vertical-align: top;
}

